--- a/pages/EmployeePayrollApp.html
+++ b/pages/EmployeePayrollApp.html
@@ -4,7 +4,7 @@
     <title>Employee Payroll Form</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="/css/form.css">
+    <link rel="stylesheet" href="/employee/css/form.css">
     <link rel="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 
@@ -18,6 +18,13 @@
             </div>
         </div>
     </header>
+    <div class="form-content">
+        <form class="form" action="#" onsubmit="save();return false">
+            <div class="form-head">Employee Payroll Form</div>
+            <div class="row-content">
+                <label class="label text" for="name">Name</label>
+                <input class="input" type="text" name="name" id="name" placeholder="Enter you  name here. . ." required>
+            </div>
 </body>
 
 </html>
