--- a/pages/EmployeePayrollApp.html
+++ b/pages/EmployeePayrollApp.html
@@ -25,6 +25,28 @@
                 <label class="label text" for="name">Name</label>
                 <input class="input" type="text" name="name" id="name" placeholder="Enter you  name here. . ." required>
             </div>
+            <div class="row-content">
+                <label class="label text" for="profile">Profile Image</label>
+                <div class="profile-radio-content">
+                    <label>
+                        <input type="radio" name="profile" id="profile1" value="../assets/profile-images/Ellipse -1.png" required>
+                        <img class=" profile" id="image1" src="../assets/profile-images/Ellipse -1.png">
+                    </label>
+                    <label>
+                        <input type="radio" name="profile" id="profile2" value="../assets/profile-images/Ellipse -3.png" required>
+                        <img class=" profile" id="image2" src="../assets/profile-images/Ellipse -3.png">
+                    </label>
+                    <label>
+                        <input type="radio" name="profile" id="profile3" value="../assets/profile-images/Ellipse -6.png" required>
+                        <img class=" profile" id="image3" src="../assets/profile-images/Ellipse -9.png">
+                    </label>
+                    <label>
+                        <input type="radio" name="profile" id="profile4" value="../assets/profile-images/Ellipse -4.png" required>
+                        <img class=" profile" id="image4" src="../assets/profile-images/Ellipse -4.png">
+                    </label>
+                </div>
+            </div>
+        </form>
+    </div>
 </body>
-
 </html>
