--- a/pages/EmployeePayrollApp.html
+++ b/pages/EmployeePayrollApp.html
@@ -23,7 +23,7 @@
             <div class="form-head">Employee Payroll Form</div>
             <div class="row-content">
                 <label class="label text" for="name">Name</label>
-                <input class="input" type="text" name="name" id="name" placeholder="Enter you  name here. . ." required>
+                <input class="input" type="text" name="name" id="name" placeholder="Enter your  name here. . ." required>
             </div>
             <div class="row-content">
                 <label class="label text" for="profile">Profile Image</label>
@@ -45,6 +45,35 @@
                         <img class=" profile" id="image4" src="../assets/profile-images/Ellipse -4.png">
                     </label>
                 </div>
+            </div>
+            <div class="row-content">
+                <label class="label text" for="gender">Gender</label>
+                <div>
+                    <input type="radio" id="male" name="gender"value="male">
+                    <label class="text" for="male">Male</label>
+                    <input type="radio" id="female" name="gender" value="female">
+                    <label class="text" for="female">Female</label>
+                </div>
+            </div>
+            <div class="row-content">
+                <label class="label text" for="department">Department</label>
+                <div>
+                    <input class="checkbox" type="checkbox" name="hr" id="hr" value="HR">
+                    <label class=" text" for="hr">HR</label>
+                    <input class="checkbox" type="checkbox" name="sales" id="sales" value="Sales">
+                    <label class=" text" for="sales">Sales</label>
+                    <input class="checkbox" type="checkbox" name="finance" id="finance" value="Finance">
+                    <label class=" text" for="finance">Finance</label>
+                    <input class="checkbox" type="checkbox" name="engineer" id="engineer" value="Engineer">
+                    <label class=" text" for="engineer">Engineer</label>
+                    <input class="checkbox" type="checkbox" name="others" id="others" value="Others">
+                    <label class=" text" for="others">Others</label>
+                </div>
+            </div>
+            <div class="row-content">
+                <label class="label text" for="salary">Choose your salary:</label>
+                <input class="input" type="range" name="salary" id="salary" max="500000" min="300000" step="100" value="400000">
+                <output class="salary-output text" for="salary">400000</output>
             </div>
         </form>
     </div>
