--- a/pages/EmployeePayrollApp.html
+++ b/pages/EmployeePayrollApp.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="/employee/css/form.css">
     <script src="employee/js/form.js"></script>
+    <script src="employee/js/empdata.js"></script>
+
     <link rel="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 
