--- a/pages/EmployeePayrollApp.html
+++ b/pages/EmployeePayrollApp.html
@@ -148,7 +148,7 @@
                 <textarea id="notes" class="input" name="Notes" placeholder="" style="height: 100px"></textarea>
             </div>
             <div class="buttonParent">
-                <a href="#" class="resetButton button cancelButton">Cancel</a>
+                <a href="./home.html" class="resetButton button cancelButton">Cancel</a>
                 <div class="submit-reset">
                     <button  type="submit" class="button submitButton" id="reset">Submit</button>
                     <button  type="reset" class="resetButton button" id="reset">Reset</button>
