--- a/pages/EmployeePayrollApp.html
+++ b/pages/EmployeePayrollApp.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="/employee/css/form.css">
     <script src="employee/js/form.js"></script>
     <script src="employee/js/empdata.js"></script>
-
+    <script src="employee/js/home.js"></script>
+    <script src="employee/js/utility.js"></script>
+    <script src="employee/js/siteproperties.js"></script>
     <link rel="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 
